docs/apache-airflow-providers-amazon/8.16.0/_sources/_api/airflow/providers/amazon/aws/triggers/glue_databrew/index.rst.txt
:py:mod:`airflow.providers.amazon.aws.triggers.glue_databrew`
=============================================================

.. py:module:: airflow.providers.amazon.aws.triggers.glue_databrew


Module Contents
---------------

Classes
~~~~~~~

.. autoapisummary::

   airflow.providers.amazon.aws.triggers.glue_databrew.GlueDataBrewJobCompleteTrigger




.. py:class:: GlueDataBrewJobCompleteTrigger(job_name, run_id, aws_conn_id, delay = 10, max_attempts = 60, **kwargs)


   Bases: :py:obj:`airflow.providers.amazon.aws.triggers.base.AwsBaseWaiterTrigger`

   Watches for a Glue DataBrew job, triggers when it finishes.

   :param job_name: Glue DataBrew job name
   :param run_id: the ID of the specific run to watch for that job
   :param delay: Number of seconds to wait between two checks. Default is 10 seconds.
   :param max_attempts: Maximum number of attempts to wait for the job to complete. Default is 60 attempts.
   :param aws_conn_id: The Airflow connection used for AWS credentials.

   .. py:method:: hook()

      Override in subclasses to return the right hook.



